--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head>
 <title>A simple digital clock</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-<script src="clock.js"></script>
+<link rel="stylesheet" type="text/css" href="./style.css">
+<script src="./clock.js"></script>
 </head>
 
 <body>
