complete clock.js

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <head>
 <title>A simple digital clock</title>
-<link rel="stylesheet" type="text/css" href="./style.css">
-<script src="./clock.js"></script>
+<link rel="stylesheet" type="text/css" href="style.css">
+<script src="clock.js"></script>
 </head>
 
 <body>
 <div class="display">
-<p id="timer">Date area</p>
+<p id="timer"></p>
 </div>
 </body>
